public/stylesheets/main.css
@media screen {
  /* --- Reset Styles --- */
  * {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  html, body {
    height: 100%;
    width: 100%;
  }

  /* --- Welcome Page Styles --- */
  * {
    font-family: Georgia, 'Times New Roman', Times, serif;
  }
  * a{
    text-decoration: none;
    color: black;
  }

  * input:focus,
    select:focus,
    textarea:focus, 
    button:focus {
      outline: none;
      background-color: white;
  }
  * input:-webkit-autofill,
    input:-webkit-autofill:hover, 
    input:-webkit-autofill:focus, 
    input:-webkit-autofill:active {
    -webkit-box-shadow: 0 0 0 30px white inset !important;
  }

  body {
    height: 100%;
    background-image: url("/images/burger.png");
    background-size: 300px;
    background-color: rgb(255, 255, 255);
    color: #333;
    font-family: Sans-Serif;
    line-height: 18px;
  }

  .topnav {
    display: block;
    background-color:rgb(18, 18, 18);
    position: fixed;
    width: 100%;
    height: max-content;
    overflow: hidden;
    top:0;
    text-align: center;
    text-justify: center;
    padding-top: 30px;
    padding-bottom: 10px;
  }

  #homelink {
    width: 100%;
    font-size: 40px;
    letter-spacing: 10px;
    padding-bottom: 5px;
    display: block;
    height: min-content;
    color: white ;
  }

  .topnav a, .topnav input{
    font-size: 16px;
    text-align: center;
    display: inline-block;
    /* padding-top: 20px; */
    margin: 10px 20px;
    height: inherit;
    color: rgb(163, 163, 163);
    background-color: transparent;
    cursor: pointer;
    border: none;
    transition: .2s ease-in-out;
  }

  .topnav a:hover, .topnav input:hover{
    text-shadow: 0px 0px 1px white;
    color: white; 
  }
  .topnav a:active, .topnav input:active{
    color: white;
    /* font-size: 14px; */
    border: none;
  }
  
  .wrapper {
    background: transparent;
    max-width: 100%;
    height: 100%;
    padding-top: 80px;
    width: 100%;
    justify-self: top;
    align-self: top;
    display: grid;
    position: static;
    grid-template: 50px max-content 5%/ repeat(5, 1fr);
  }

  .yield {
    grid-area: 1 / 1 / 4 / 6;
    justify-self: center;
    align-self: top;
    text-align: center;
    width: 100%;
    /* animation-name: fadeItems;
    animation: fadeItems .5s; */
  }

  /* @keyframes fadeItems {
    0% {opacity: 0;}
    5% {opacity: 0;}
    100% {opacity: 1;}
  } */

  #searchContainer {
    width: 100%;
    height: 50px;
    display: grid;
    grid-template: 50px/ repeat(2, 50%);
    background-color: rgb(221, 220, 220);
    position: fixed;
    margin-top: 20px;
  }

  
  #filter {
    text-align: left;
    align-self: center;
    justify-self: center;
    width: 100%;
    grid-column: 2;
    /* padding-left: 30px; */
    font-size: 15px;
    display: grid;
    grid-template: 100% / 100%;
    /* padding-left: 40px; */
  }

  #filterbar {
    border: 1px rgba(0,0,0,0.3)!important; 
    width: 85%;
    height: 30px;
    align-self: center;
    justify-self: center;
    transition: .6s ease-in-out;
  }
 
  #searchby {
    grid-column: 1;
    text-align: left;
    /* padding-right: 30px; */
    align-self: center;
    justify-self: center;
    width: 100%;
    /* padding-right: 10px; */
  }

  #searchby form {
    grid-column: 1;
    width: 100%;
    height: 100%;
    align-self: center;
    justify-self: center;
    display: grid;
    grid-template: 100% / 1fr 50px;
  }
  #searchImage {
    grid-column: 2 !important;
    height: 30px;
    align-self: center;
    justify-self: center;
    border-radius: 25px;
    transition: .6s ease-in-out;
  }
  #searchbar {
    width: 95%;
    height: 30px;
    border-radius: 2px;
    border: 1px rgba(0,0,0,0.3)!important;
    cursor: text !important;
    text-align: center;
    align-self: center;
    justify-self: center;
    padding-left: 2px;
    transition: .6s ease-in-out;
  }

  #searchbar:hover, #filterbar:hover, #searchImage:hover{
    box-shadow: 1px 1px 20px grey;
  }

  .list {
    display: block;
    padding-top: 80px;
    margin-bottom: 50px;
  }

  .list a {
    padding: 5px;
    color: rgb(0, 0, 0) !important;
  }

  .list .header{
    width: max-content;
    margin: auto;
    line-height: 50px;
    padding: 10px;
    background-color: white;
    box-shadow: 1px 1px 5px grey;
    border-radius: 6px;
    animation-name: fadehead;
    animation: fadehead 6s;
    opacity: 0;
  }

  @keyframes fadehead {
    0% {opacity: 0;}
    30% {opacity: 1;}
    60% {opacity: 1;}
    100% {opacity: 0;}
  }



  .listItem {
    /* white-space: nowrap; */
    color: grey;
    background-color: rgb(254, 255, 254);
    box-shadow: 1px 1px 5px grey;
    width: 240px;
    height: 250px;
    display: inline-block;
    border-radius: 2%;
    margin: 20px;
    padding-top: 20px;
    overflow-y: scroll;
    transition: .6s ease-in-out;
  }

  .listItem:hover {
    box-shadow: 1px 20px 30px grey;
  }

  .listItem hr {
    border: thin;
    border-top: thin solid #000000;
    width: 95%;
    margin: auto;
  }

  .listItem input {
    background-color: transparent;
    padding: 5px;
    border-radius: 50%;
    font-weight: bold;
    border: none;
  }

  .recipe {
    text-align: left;
  }

  .editForm {
    /* white-space: nowrap; */
    max-width: 75%;
    width: 700px;
    background-color: white;
    box-shadow: 1px 1px 5px grey;
    margin: 80px auto;
    padding: 30px;
    border-radius: 3%;
    overflow-y: scroll;
  }

  .editForm h1 {
    line-height: 50px;
  }

  .submitButton input, form {
    border: none;
    background-color: transparent;
    cursor: pointer;
    font-size: 15px;
    font-weight: normal !important;
    display: inline-block;
    margin: 10px;
  }

  #userRecipe input{
    background-color: transparent;
    padding: 5px;
    border-radius: 50%;
    font-weight: bold;
    border: none;
  }

  .newRecipe input {
    border: solid thin;
    margin: 3px;
    padding: 0 3px;
    height: 28px;
    border-radius: 10px;
    background: none;
  }

  #trashButton {
    height: 15px;
    display: inline-block;
    vertical-align: middle;
    border: none;
  }

  #addButton {
    display: inline-block;
    height: 15px;
    padding-left: 3px;
    padding-top: 2px;
    border: none;
  }


  #groceryList {
    width: 100%;
    padding: 30px;
  }

  #groceryList td {
   border-top: solid thin;
   padding: 20px;
  }

  #groceryList input {
    border: none;
    background-color: transparent;
  }

  .printButton {
    border: none;
    width: 30px;
    cursor: pointer;
    background-color: transparent;
  }

  h2 {
    border-bottom: 2px solid #ccc;
    font-size: 24px;
    line-height: 36px;
    margin-bottom: 16px;
  }

  h3 {
    font-size: 18px;
    line-height: 36px;
  }

  p {
    margin-bottom: 18px;
  }

  .main {
    overflow: hidden;
  }

  .content {
    float: left;
    width: 60%; /* 480px / 800px */
  }

  .sidebar {
    background: #eee;
    border: 1px solid #ccc;
    float: right;
    padding: 2.08333333333%; /* 5px / 240px */
    width: 30%; /* 240px / 800px */
  }

  .sidebar ul {
    font-size: 14px;
  }

  .branding {
    clear: both;
  }

  footer.branding {
    /* border-top: 2px solid #ccc; */
    position: fixed;
    bottom: 0;
    width: 100%;
    justify-self: center;
    align-self: flex-end;
    text-align: center;
    color: white;
    background-color: black;
  }
}

@media screen and (max-width: 600px) {
  .wrapper {
    /* -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    width: auto; */
  }

  .content, .sidebar {
    float: none;
    width: 100%;
  }

  .sidebar {
    background: transparent;
    border: none;
    border-top: 2px solid #ccc;
    padding: 0;
  }
  .topnav {
    padding-top: 20px;
    height: 70px;
    /* overflow: scroll; */
    /* white-space: nowrap; */
  }
  .topnav a {
    font-size: 10px;
    display: inline-block;
    padding: 2px;
    margin: 0;
    height: min-content;
  }
  .topnav input {
    font-size: 10px;
    display: inline-block;
    padding: 2px;
    margin: 0;
    height: min-content;
  }

  #homelink {
    font-size: 10px;
    white-space: nowrap;
    text-align: center;
    justify-self: center;
    align-self: center;
  }

  

  #searchContainer {
   padding-top: 0;
  }

  h2 {
    font-size: 18px;
    line-height: 24px;
  }
}

